--- a/index.html
+++ b/index.html
@@ -1,1 +1,170 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!-- saved from url=(0043)http://vision.princeton.edu/people/shurans/ -->
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+
+    <title>Anton Jeran Ratnarajah</title>
+
+
+    <link href="./css" rel="stylesheet">
+    <link rel="stylesheet" href="./style-seanzw.css" type="text/css" media="screen">
+
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-126741439-1', 'auto');
+        ga('send', 'pageview');
+
+    </script>
+
+
+</head>
+
+
+<body>
+
+    <div id="all">
+        <div id="all-bio">
+            <br>
+            <div style="text-align:center">
+                <h1>Anton Jeran Ratnarajah</h1>
+                <h5> <a href="mailto:jeran@umd.edu">Mail</a>,
+                    <a href="https://github.com/anton-jeran">GitHub</a>,
+                    <a href="https://www.youtube.com/channel/UCyFib_CagIroRVyEjnA7_LQ">YouTube</a>,
+                    <a href="https://scholar.google.com/citations?user=I_CcbVcAAAAJ">Google Scholar</a>,
+                    <a target="_blank" href="./CV.pdf"> CV </a></h5>
+            </div>
+            <br>
+            I am a thrid year PhD student in Electrical and Computer Engineering at the <a href="https://ece.umd.edu/"> University of Maryland-College Park </a>. I am a member of <a href="https://gamma.umd.edu/"> GAMMA Lab </a> supervised my <a href="https://www.cs.umd.edu/people/dmanocha/"> Professor Dinesh Manocha </a>.
+            I am broadly interested in acoustic simulations and <a href="https://gamma.umd.edu/researchdirections/speech/main"> far-field speech aumentation </a>. My previous research involves Computer Vision (<a href="https://www.youtube.com/watch?v=VlWLGwnvtnI&list=PLQbiVXftnelqbxVEKuXuqITugb5N2rXz0/">  Video Summarization </a>, <a href="https://www.youtube.com/watch?v=VlWLGwnvtnI&list=PLQbiVXftnelqbxVEKuXuqITugb5N2rXz0/">  Forensic Detection </a>)  
+            <br><br>
+
+            My research interests are in Computer Graphics, including geometry learning and sound simulation.
+            <br><br>
+        </div>
+
+        <div id="all-photo">
+            <img src="./graduation_pic.jpeg">
+        </div>
+
+        <div class="all-info">
+            <h1>Research</h1>
+            <table id="Publications">
+                <tbody>
+                    <tr>
+                        <td><img src="./paper_small.jpg" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>Video to Fully Automatic 3D Hair Model</b><br>
+                                <a href="https://scholar.google.co.uk/citations?user=2_KWxOcAAAAJ&hl=en">Shu
+                                    Liang</a>, Xiufeng Huang, <b>Xianyu Meng</b>, Kunyao Chen, <a href="https://homes.cs.washington.edu/~shapiro/">Linda
+                                    G. Shapiro</a>, <a href="ttps://homes.cs.washington.edu/~kemelmi/">Ira
+                                    Kemelmacher-Shlizerman</a><br>
+                                <b>ACM Transactions on Graphics (<b>SIGGRAPH ASIA 2018</b>)</b><br>
+                                <a href="https://arxiv.org/abs/1809.04765">Paper</a>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><img src="./vvnet-fig3.png" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>VV-Net: Voxel VAE Net with Group Convolutions for Point Cloud
+                                    Segmentation</b><br>
+                                <b>Hsien-Yu Meng</b>, <a href="http://www.escience.cn/people/gaolin/index.html">Lin
+                                    Gao</a>, <a href="https://users.cs.cf.ac.uk/Yukun.Lai/">Yu-Kun Lai</a>,
+                                <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
+                                <b>ICCV 2019</b><br>
+                                <a href="https://github.com/xianyuMeng/VV-Net-Voxel-VAE-Net-with-Group-Convolutions-for-Point-Cloud-Segmentation">Code</a>&nbsp;|&nbsp;
+                                <a href="http://openaccess.thecvf.com/content_ICCV_2019/html/Meng_VV-Net_Voxel_VAE_Net_With_Group_Convolutions_for_Point_Cloud_ICCV_2019_paper.html">Paper</a>
+                            </p>
+                        </td>
+                    </tr>
+
+
+
+                    <tr>
+                        <td><img src="./prs-net.PNG" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>PRS-Net: Planar Reflective Symmetry Detection Net for 3D Models </b><br>
+                                <a href="http://www.escience.cn/people/gaolin/index.html">Lin
+                                    Gao</a>, <a> Ling-Xiao Zhang</a>, <b>Hsien-Yu Meng</b>, <a>Yi-Hui Ren</a>,<a href="https://users.cs.cf.ac.uk/Yukun.Lai/">Yu-Kun Lai</a>,<a href="https://www.graphics.rwth-aachen.de/person/3/"> Leif Kobbelt </a><br>
+                                <b>TVCG 2020</b><br>
+                                <a href="https://arxiv.org/pdf/1910.06511.pdf">Paper</a>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><img src="./EQ.PNG" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>Low-frequency Compensated Synthetic Impulse Responses for Improved Far-field Speech Recognition</b><br>
+                                <a href="https://royjames.github.io/zhy/">Zhenyu Tang</a>, <b>Hsien-Yu Meng</b>,
+                                <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
+                                <b>ICASSP 2020</b><br>
+                                <a href="https://arxiv.org/abs/1910.10815">Paper</a>
+                            </p>
+                        </td>
+                    </tr>
+
+                     <tr>
+                        <td><img src="./IEEE_VR_21.PNG" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>Learning Acoustic Scattering Fields for Dynamic Interactive Sound Propagation</b><br>
+                                <a href="https://royjames.github.io/zhy/">Zhenyu Tang*</a>, <b>Hsien-Yu Meng*</b>,
+                                <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
+                                <b>IEEE VR 2021</b><br>
+                                <a href="https://github.com/RoyJames/Fast3DScattering-release">Code</a>&nbsp;|
+                                &nbsp;
+                                <a href="https://arxiv.org/abs/2010.04865">Paper</a>
+                            </p>
+                        </td>
+                    </tr>
+
+
+                     <tr>
+                        <td><img src="./IJCAI_2021.png" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>Point-based Acoustic Scattering for Interactive Sound Propagation via Surface Encoding</b><br>
+                                <b>Hsien-Yu Meng</b>, <a href="https://royjames.github.io/zhy/">Zhenyu Tang</a>, 
+                                <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
+                                <b>IJCAI  2021(acceptance rate 13.9%)</b><br>
+                                <a href="https://github.com/RoyJames/Fast3DScattering-release">Code</a>&nbsp;|
+                                &nbsp;
+                                <a href="https://arxiv.org/abs/2105.08177">Paper</a>&nbsp;
+                                &nbsp;
+                                <a href="https://www.youtube.com/watch?v=jPfmE5Z0YXs">Video</a>
+                            </p>
+                        </td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+        </div>
+
+        <div class="all-info">
+            <h1>Education</h1>
+            <ul style="list-style-type:disc; margin-left: 20px">
+                <li>Tsinghua University, Dept. of Computer Science. Aug. 2016 - Jul. 2019, MSc. </li>
+                <li>Tsinghua University, Dept. of Electronic Engineering. Aug. 2012 - Jul. 2016, BS. </li>
+                <li>Duke University, <a href="http://deckard.duhs.duke.edu/~mazurowski/mylab.html">Carl E. Ravin
+                        Advanced Imaging Laboratories</a>,
+                    research asistant, Jul. 2015 - Sep. 2015</li>
+            </ul>
+        </div>
+    </div>
+</body>
+
+</html>
