--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <table id="Publications">
                 <tbody>
                     <tr>
-                        <td><img src="./synopsis.jpg" width="220px"></td>
+                        <td><img src="./synopsis.png" width="220px"></td>
                         <td>
                             <p>
                                 <b>Moving Object Based Collision-Free Video Synopsis</b><br>
@@ -75,7 +75,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><img src="./IR1.jpg" width="220px"></td>
+                        <td><img src="./IR1.png" width="220px"></td>
                         <td>
                             <p>
                                 <b>IR-GAN: Room impulse response generator for far-field speech recognition</b><br>
@@ -90,7 +90,7 @@
 
 
                     <tr>
-                        <td><img src="./tsrir.jpg" width="220px"></td>
+                        <td><img src="./tsrir.png" width="220px"></td>
                         <td>
                             <p>
                                 <b>TS-RIR: Translated synthetic room impulse responses for speech augmentation </b><br>
@@ -102,7 +102,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><img src="./curr.jpg" width="220px"></td>
+                        <td><img src="./curr.png" width="220px"></td>
                         <td>
                             <p>
                                 <b>IMPROVING REVERBERANT SPEECH SEPARATION WITH MULTI-STAGE TRAINING AND CURRICULUM LEARNING</b><br>
