--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
 
         <div id="all-photo">
-            <img src="./smc.jpg" width="320">
-            <img src="./nanyang.jpg" width="1200">
-            <img src="./ict.jpg" width="600">
-            <img src="./best.jpg" width="1100">
+            <img src="./smc.jpg" width="320px">
+            <img src="./nanyang.jpg" width="1200px">
+            <img src="./ict.jpg" width="600px">
+            <img src="./best.jpg" width="1100px">
         </div>
 
         <div class="all-info">
