--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
         </div>
 
         <div id="all-photo">
-            <img src="./smc.jpg" width="320px">
-            <img src="./nanyang.jpg" width="1200px">
-            <img src="./ict.jpg" width="600px">
-            <img src="./best.jpg" width="1100px">
+            <img src="./cover.png">
+            
         </div>
 
         <div class="all-info">
