--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="all-photo">
-            <img src="./cover.png">
+            <img src="./cover.png" width="1000px">
             
         </div>
 
