--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         </div>
 
         <div id="all-photo">
-            <img src="./cover.png" width="1000px">
+            <img src="./smc.png" width="320">
+            <img src="./nanyang.png" width="600">
+            <img src="./ict.png" width="400">
+            <img src="./best.png" width="550">           
             
         </div>
 
