--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div id="all-photo">
             <img src="./smc.png" width="320">
-            <img src="./nanyang.png" width="600">
+            <img src="./nanyang.jpg" width="600">
             <img src="./ict.png" width="400">
             <img src="./best.png" width="550">           
             
