--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
 
         <div id="all-photo">
-            <img src="./smc.JPG" width="320">
+            <img src="./smc.jpg" width="320">
             <img src="./nanyang.jpg" width="600">
-            <img src="./ict.JPG" width="400">
-            <img src="./best.JPG" width="550">           
+            <img src="./ict.jpg" width="400">
+            <img src="./best.jpg" width="550">           
             
         </div>
 
