--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
         </div>
 
         <div id="all-photo">
-            <img src="./smc.jpg" height="320">
-            <img src="./nanyang.jpg" height="320">
-            <img src="./ict.jpg" height="320">
-            <img src="./best.jpg"height="320">           
+            <img src="./smc.jpg" height="320" width ="256">
+            <img src="./nanyang.jpg" height="320" width ="213">
+            <img src="./ict.jpg" height="320" width ="320">
+            <img src="./best.jpg"height="320" width ="170">           
             
         </div>
 
