--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
         <div id="all-photo">
             
-            <img src="./smc.jpg" height="320" width ="257">
-            <img src="./nanyang.jpg" height="320" width ="213">
-            <img src="./ict.jpg" height="320" width ="320">
-            <img src="./best.jpg"height="320" width ="170">           
+            <img src="./smc.jpg" height="320" width =auto>
+            <img src="./nanyang.jpg" height="320" width =auto>
+            <img src="./ict.jpg" height="320" width =auto>
+            <img src="./best.jpg"height="320" width =auto>           
             
         </div>
 
