--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
         <div id="all-photo">
             
-            <img src="./smc.jpg" height="320" width =auto>
-            <img src="./nanyang.jpg" height="320" width =auto>
-            <img src="./ict.jpg" height="320" width =auto>
-            <img src="./best.jpg"height="320" width =auto>           
+            <img src="./smc.jpg"  width =auto height="320">
+            <img src="./nanyang.jpg"  width =auto height="320">
+            <img src="./ict.jpg"  width =auto height="320">
+            <img src="./best.jpg" width =auto height="320">           
             
         </div>
 
