--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <p>
                                 <b>TS-RIR: Translated synthetic room impulse responses for speech augmentation </b><br>
                                 <b>Anton Jeran Ratnarajah</b>, Zhenyu Tang,<a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
-                                <b>Submitted to IEEE ASRU 2021</b><br>
+                                <b>Arxiv</b><br>
                                 <a href="https://github.com/GAMMA-UMD/TS-RIR">Code</a>&nbsp;|&nbsp;
                                 <a href="https://arxiv.org/pdf/2103.16804v2.pdf">Paper</a>
                             </p>
@@ -111,8 +111,8 @@
                         <td>
                             <p>
                                 <b>IMPROVING REVERBERANT SPEECH SEPARATION WITH MULTI-STAGE TRAINING AND CURRICULUM LEARNING</b><br>
-                                <b>Rohith Aralikatti</b>, Anton Jeran Ratnarajah, Zhenyu Tang,<a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
-                                <b>Submitted to IEEE ASRU 2021</b><br>
+                                Rohith Aralikatti, <b>Anton Jeran Ratnarajah</b>, Zhenyu Tang,<a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
+                                <b>Arxiv</b><br>
                                 <a href="https://arxiv.org/pdf/2107.09177.pdf">Paper</a>
                             </p>
                         </td>
