--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <br>
             I am a third year PhD student in Electrical and Computer Engineering at the <a href="https://ece.umd.edu/"> University of Maryland-College Park</a> and a member of the <a href="https://gamma.umd.edu/">GAMMA Lab</a> supervised by <a href="https://www.cs.umd.edu/people/dmanocha/">Professor Dinesh Manocha</a>. 
-            At present my is in acoustic simulations and <a href="https://gamma.umd.edu/researchdirections/speech/main"> far-field speech augmentation</a>. 
+            At present my research is in acoustic simulations and <a href="https://gamma.umd.edu/researchdirections/speech/main"> far-field speech augmentation</a>. 
             My previous research involves Computer Vision (<a href="https://www.youtube.com/playlist?list=PLQbiVXftnelqbxVEKuXuqITugb5N2rXz0">Video Summarization</a>, <a href="https://www.youtube.com/watch?v=vsZlYKQxSkE">  Forensic Detection </a>)  and Speech Processing (<a href="https://www.youtube.com/watch?v=_v5rDmDXvD0">  Automatic Speech Recognition </a>).
             
             <br><br>
