--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                                 <b>Anton Jeran Ratnarajah</b>, <a href="https://scholar.google.com/citations?user=4nGncN4AAAAJ">Shi-Xiong Zhang</a>,  Meng Yu, Zhenyu Tang, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a>, <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ">Dong Yu</a> <br>
                                 <b>arxiv</b><br>
                                 <a href="https://github.com/anton-jeran/FAST-RIR">Code</a>&nbsp;|&nbsp;
+                                <a href="https://arxiv.org/pdf/2110.04057.pdf">Paper</a>&nbsp;|&nbsp;
                                 <a href="https://anton-jeran.github.io/FRIR/">Webpage</a>
                             </p>
                         </td>
