--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                                 <b>Anton Jeran Ratnarajah</b>, Zhenyu Tang, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
                                 <b>INTERSPEECH 2021</b><br>
                                 <a href="https://github.com/GAMMA-UMD/IR-GAN">Code</a>&nbsp;|&nbsp;
-                                <a href="https://www.isca-speech.org/archive/interspeech_2021/ratnarajah21_interspeech.html">Paper</a>
+                                <a href="https://www.youtube.com/watch?v=_v5rDmDXvD0">Video</a>&nbsp;|&nbsp;
+                                <a href="https://www.isca-speech.org/archive/interspeech_2021/ratnarajah21_interspeech.html">Paper</a> &nbsp;|&nbsp;
+                                <a href="https://github.com/GAMMA-UMD/IR-GAN/blob/main/slides/IR-GAN_final.pdf">Slides</a>
                             </p>
                         </td>
                     </tr>
@@ -103,7 +105,9 @@
                                 <b>Anton Jeran Ratnarajah</b>, Zhenyu Tang, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
                                 <b>Accepted to IEEE ASRU 2021</b><br>
                                 <a href="https://github.com/GAMMA-UMD/TS-RIR">Code</a>&nbsp;|&nbsp;
-                                <a href="https://arxiv.org/pdf/2103.16804v2.pdf">Paper</a>
+                                <a href="https://www.youtube.com/watch?v=gghzIMT8FCw">Video</a>&nbsp;|&nbsp;
+                                <a href="https://arxiv.org/pdf/2103.16804.pdf">Paper</a> |&nbsp;|&nbsp;
+                                <a href="https://github.com/GAMMA-UMD/TS-RIR/blob/main/slides/ts-rir_final.pdf">Slides</a>
                             </p>
                         </td>
                     </tr>
