--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 <b>Accepted to IEEE ASRU 2021</b><br>
                                 <a href="https://github.com/GAMMA-UMD/TS-RIR">Code</a>&nbsp;|&nbsp;
                                 <a href="https://www.youtube.com/watch?v=gghzIMT8FCw">Video</a>&nbsp;|&nbsp;
-                                <a href="https://arxiv.org/pdf/2103.16804.pdf">Paper</a> |&nbsp;|&nbsp;
+                                <a href="https://arxiv.org/pdf/2103.16804.pdf">Paper</a> &nbsp;|&nbsp;
                                 <a href="https://github.com/GAMMA-UMD/TS-RIR/blob/main/slides/ts-rir_final.pdf">Slides</a>
                             </p>
                         </td>
