--- a/index.html
+++ b/index.html
@@ -68,6 +68,20 @@
             <table id="Publications">
                 <tbody>
                     <tr>
+                        <td><img src="./mesh2ir.png" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>MESH2IR: Neural Acoustic Impulse Response Generator for Complex 3D Scenes</b><br>
+                                <b>Anton Jeran Ratnarajah</b>, Zhenyu Tang,Rohith Aralikatti,  <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a>, <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ">Dong Yu</a> <br>
+                                <b>ACM Multimedia 2022 (Oral)</b><br>
+                                <a href="https://github.com/anton-jeran/MESH2IR">Code</a>&nbsp;|&nbsp;
+                                <a href="https://arxiv.org/pdf/2205.09248.pdf">Paper</a>&nbsp;|&nbsp;
+                                <a href="https://www.youtube.com/watch?v=TUcueAmAbio">Video</a>&nbsp;|&nbsp;
+                                <a href="https://anton-jeran.github.io/M2IR/">Webpage</a>
+                            </p>
+                        </td>
+                    </tr>
+                    <tr>
                         <td><img src="./archi1.png" width="220px"></td>
                         <td>
                             <p>
@@ -76,6 +90,7 @@
                                 <b>ICASSP 2022</b><br>
                                 <a href="https://github.com/anton-jeran/FAST-RIR">Code</a>&nbsp;|&nbsp;
                                 <a href="https://arxiv.org/pdf/2110.04057.pdf">Paper</a>&nbsp;|&nbsp;
+                                <a href="https://www.youtube.com/watch?v=1I8Rr7a2o0k">Video</a>&nbsp;|&nbsp;
                                 <a href="https://anton-jeran.github.io/FRIR/">Webpage</a>
                             </p>
                         </td>
