--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <td><img src="./META.png" width="220px"></td>
                         <td>
                             <p>
-                                <b>MESH2IR: Neural Acoustic Impulse Response Generator for Complex 3D Scenes</b><br>
+                                <b>Towards Improved Room Impulse Response Estimation for Speech Recognition</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, Ishwarya Ananthabhotla, <a href="https://www.vamsiithapu.com/">Vamsi Krishna Ithapu</a>, Pablo Hoffmann, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a>,  <a href="https://scholar.google.com/citations?user=S_S6SZAAAAAJ">Paul Calamia</a> <br>
                                 <b>arxiv</b><br>                                
                                 <a href="https://arxiv.org/pdf/2211.04473.pdf">Paper</a>&nbsp;|&nbsp;                    
