--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
         </div>
 
         <div id="all-photo">
-            
-            <img src="./smc.jpg"  width =auto height="320">
-            <img src="./nanyang.jpg"  width =auto height="320">
-            <img src="./ict.jpg"  width =auto height="320">
-            <img src="./best.jpg" width =auto height="320">           
+            <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+            <tr>
+            <img src="./smc.jpg"  width =25% >
+            <img src="./nanyang.jpg"  width =25% >
+            <img src="./ict.jpg"  width =25% >
+            <img src="./best.jpg" width =25% >
+            </tr>
+            </table>           
             
         </div>
 
@@ -67,6 +70,19 @@
             <h1>Research</h1>
             <table id="Publications">
                 <tbody>
+                     <tr>
+                        <td><img src="./scene2bir.jpg" width="220px"></td>
+                        <td>
+                            <p>
+                                <b>Scene2BIR: Material-aware learning-based binaural impulse response generator for reconstructed real-world 3D scenes</b><br>
+                                <b>Anton Jeran Ratnarajah</b>, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
+                                <b>arxiv</b><br>                                
+                                <a href="https://arxiv.org/abs/2302.02809">Paper</a>&nbsp;|&nbsp; 
+                                <a href="https://github.com/anton-jeran/Scene2BIR">Code</a>&nbsp;|&nbsp;                  
+                                <a href="https://anton-jeran.github.io/S2BIR/">Webpage</a>
+                            </p>
+                        </td>
+                    </tr>
                     <tr>
                         <td><img src="./META.png" width="220px"></td>
                         <td>
