--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
                     <a target="_blank" href="./CV.pdf"> CV </a></h7>
             </div>
             <br>
-            I am a fourth-year PhD student in Electrical and Computer Engineering at the <a href="https://ece.umd.edu/"> University of Maryland-College Park</a> and a member of the <a href="https://gamma.umd.edu/">GAMMA Lab</a> supervised by <a href="https://www.cs.umd.edu/people/dmanocha/">Professor Dinesh Manocha</a>. 
-            At present, my research is in acoustic simulations and <a href="https://gamma.umd.edu/researchdirections/speech/main"> far-field speech augmentation</a>. 
-            My previous research involves Computer Vision (<a href="https://www.youtube.com/playlist?list=PLQbiVXftnelqbxVEKuXuqITugb5N2rXz0">Video Summarization</a>, <a href="https://www.youtube.com/watch?v=vsZlYKQxSkE">  Forensic Detection </a>)  and Speech Processing (<a href="https://www.youtube.com/watch?v=_v5rDmDXvD0">  Automatic Speech Recognition </a>).
+            I am a 4th PhD student in Electrical and Computer Engineering at <a href="https://ece.umd.edu/"> University of Maryland-College Park</a> advised by <a href="https://www.cs.umd.edu/people/dmanocha/">Prof.&nbsp;Dinesh&nbsp;Manocha</a>. I am broadly interested in building machine learning models to create high quality sound experience in interactive applications. My current line of research is learning-based  <a href="https://gamma.umd.edu/researchdirections/sound/main">sound synthesis and propogation</a> for AR and VR applications and  <a href="https://gamma.umd.edu/researchdirections/speech/main">audio/speech processing applications</a>.
             
             <br><br>
 
