--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <h1>Research</h1>
             <table id="Publications">
                 <tbody>
-                     <tr>
+<!--                      <tr>
                         <td><img src="./scene2bir.jpg" width="220px"></td>
                         <td>
                             <p>
@@ -80,14 +80,14 @@
                                 <a href="https://anton-jeran.github.io/S2BIR/">Webpage</a>
                             </p>
                         </td>
-                    </tr>
+                    </tr> -->
                     <tr>
                         <td><img src="./META.png" width="220px"></td>
                         <td>
                             <p>
                                 <b>Towards Improved Room Impulse Response Estimation for Speech Recognition</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, Ishwarya Ananthabhotla, <a href="https://www.vamsiithapu.com/">Vamsi Krishna Ithapu</a>, Pablo Hoffmann, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a>,  <a href="https://scholar.google.com/citations?user=S_S6SZAAAAAJ">Paul Calamia</a> <br>
-                                <b>arxiv</b><br>                                
+                                <b>ICASSP 2023</b><br>                                
                                 <a href="https://arxiv.org/pdf/2211.04473.pdf">Paper</a>&nbsp;|&nbsp;                    
                                 <a href="https://anton-jeran.github.io/S2IR/">Webpage</a>
                             </p>
