--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
                                 <b>Anton Jeran Ratnarajah</b>, Ishwarya Ananthabhotla, <a href="https://www.vamsiithapu.com/">Vamsi Krishna Ithapu</a>, Pablo Hoffmann, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a>,  <a href="https://scholar.google.com/citations?user=S_S6SZAAAAAJ">Paul Calamia</a> <br>
                                 <b>ICASSP 2023</b><br>                                
                                 <a href="https://arxiv.org/pdf/2211.04473.pdf">Paper</a>&nbsp;|&nbsp;                    
-                                <a href="https://anton-jeran.github.io/S2IR/">Webpage</a>
-                                <a href="https://www.youtube.com/watch?v=65VoVLBUdg4">Video</a>&nbsp;|&nbsp;
+                                <a href="https://anton-jeran.github.io/S2IR/">Webpage</a>&nbsp;|&nbsp;
+                                <a href="https://www.youtube.com/watch?v=65VoVLBUdg4">Video</a>
                             </p>
                         </td>
                     </tr>
