--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <td>
                             <p>
                                 <b>M3-AUDIODEC: MULTI-CHANNEL MULTI-SPEAKER MULTI-SPATIAL AUDIO CODEC</b><br>
-                                <b>Anton Jeran Ratnarajah</b>, <a href="https://scholar.google.com/citations?user=4nGncN4AAAAJ">Shi-Xiong Zhang</a>, <a href="https://scholar.google.com/citations?hl=en&user=OSM9xooAAAAJ"> Yi Luo</a>, <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ">Dong Yu</a> <br>
+                                <b>Anton Jeran Ratnarajah</b>, <a href="https://scholar.google.com/citations?user=4nGncN4AAAAJ">Shi-Xiong Zhang</a>, <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ">Dong Yu</a> <br>
                                 <b>Arxiv</b><br>
                                 <a href="https://github.com/anton-jeran/MULTI-AUDIODEC">Code</a>&nbsp;|&nbsp;
                                 <a href="https://arxiv.org/pdf/2309.07416.pdf">Paper</a>&nbsp;|&nbsp;
