--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
                                 <b>Listen2Scene: Interactive material-aware binaural sound propagation for reconstructed 3D scenes</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
                                 <b>Arxiv</b><br>    
-                                <a href="https://anton-jeran.github.io/Listen2Scene/">Code</a>&nbsp;|&nbsp;                           
+                                <a href="https://github.com/anton-jeran/Listen2Scene">Code</a>&nbsp;|&nbsp;                           
                                 <a href="https://arxiv.org/abs/2302.02809">Paper</a>&nbsp;|&nbsp;                                                 
-                                <a href="https://github.com/anton-jeran/Listen2Scene">Webpage</a>
+                                <a href="https://anton-jeran.github.io/Listen2Scene/">Webpage</a>
                             </p>
                         </td>
                     </tr>
