--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                             <p>
                                 <b>Listen2Scene: Interactive material-aware binaural sound propagation for reconstructed 3D scenes</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
-                                <b>Arxiv</b><br>    
+                                <b>IEEE VR 2024</b><br>    
                                 <a href="https://github.com/anton-jeran/Listen2Scene">Code</a>&nbsp;|&nbsp;                           
                                 <a href="https://arxiv.org/abs/2302.02809">Paper</a>&nbsp;|&nbsp;                                                 
                                 <a href="https://anton-jeran.github.io/Listen2Scene/">Webpage</a>
