--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <p>
                                 <b>AV-RIR: Audio-Visual Room Impulse Response Estimation</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, Sreyan Ghosh, Sonal Kumar, Purva Chiniya, Dinesh Manocha <br>
-                                <b>Arxiv</b><br>
+                                <b>CVPR 2024</b><br>
                                 <!-- <a href="https://github.com/anton-jeran/MULTI-AUDIODEC">Code</a>&nbsp;|&nbsp; -->
                                 <a href="https://arxiv.org/pdf/2312.00834.pdf">Paper</a>&nbsp;|&nbsp;
                                 <a href="https://www.youtube.com/watch?v=tTsKhviukAE">Video</a>
