--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <p>
                                 <b>TS-RIR: Translated synthetic room impulse responses for speech augmentation </b><br>
                                 <b>Anton Jeran Ratnarajah</b>, Zhenyu Tang, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
-                                <b>Accepted to IEEE ASRU 2021</b><br>
+                                <b>IEEE ASRU 2021</b><br>
                                 <a href="https://github.com/GAMMA-UMD/TS-RIR">Code</a>&nbsp;|&nbsp;
                                 <a href="https://www.youtube.com/watch?v=gghzIMT8FCw">Video</a>&nbsp;|&nbsp;
                                 <a href="https://arxiv.org/pdf/2103.16804.pdf">Paper</a> &nbsp;|&nbsp;
@@ -204,7 +204,7 @@
                             <p>
                                 <b>IMPROVING REVERBERANT SPEECH SEPARATION WITH MULTI-STAGE TRAINING AND CURRICULUM LEARNING</b><br>
                                 Rohith Aralikatti, <b>Anton Jeran Ratnarajah</b>, Zhenyu Tang, <a href="https://www.cs.umd.edu/people/dmanocha">Dinesh Manocha</a> <br>
-                                <b>Accepted to IEEE ASRU 2021</b><br>
+                                <b>IEEE ASRU 2021</b><br>
                                 <a href="https://arxiv.org/pdf/2107.09177.pdf">Paper</a>
                             </p>
                         </td>
@@ -227,7 +227,7 @@
                             <p>
                                 <b>University of Maryland - College Park, College Park, MD, USA</b><br>
                                 <b>PhD in Electrical and Computer Engineering</b><br>
-                                <b>Cumulative GPA: 3.86 / 4</b><br>
+                                <b>Cumulative GPA: 3.88 / 4</b><br>
                                 <b>Aug. 2019 - Present (2024 expected)</b><br>               
                                                                                        
                             </p>
