--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                                 <b>AV-RIR: Audio-Visual Room Impulse Response Estimation</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, Sreyan Ghosh, Sonal Kumar, Purva Chiniya, Dinesh Manocha <br>
                                 <b>CVPR 2024</b><br>
-                                <!-- <a href="https://github.com/anton-jeran/MULTI-AUDIODEC">Code</a>&nbsp;|&nbsp; -->
+                                <a href="https://anton-jeran.github.io/AVRIR/">Code</a>&nbsp;|&nbsp;
                                 <a href="https://arxiv.org/pdf/2312.00834.pdf">Paper</a>&nbsp;|&nbsp;
-                                <a href="https://www.youtube.com/watch?v=tTsKhviukAE">Video</a>
+                                <a href="https://anton-jeran.github.io/AVRIR/">Webpage</a>
                             </p>
                         </td>
                     </tr>
