--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a target="_blank" href="./CV.pdf"> CV </a></h7>
             </div>
             <br>
-            I am a 5th year PhD student in Electrical and Computer Engineering at <a href="https://ece.umd.edu/"> University of Maryland-College Park</a> advised by <a href="https://www.cs.umd.edu/people/dmanocha/">Prof.&nbsp;Dinesh&nbsp;Manocha</a>. I am broadly interested in building multi-modal machine learning models to create high quality sound experience in interactive applications. My current line of research is learning-based  <a href="https://gamma.umd.edu/researchdirections/sound/main">sound synthesis and propogation</a> for AR and VR applications and  <a href="https://gamma.umd.edu/researchdirections/speech/main">audio/speech processing applications</a>.
+            I am a 5th year PhD student in Electrical and Computer Engineering at <a href="https://ece.umd.edu/"> University of Maryland-College Park</a> advised by <a href="https://www.cs.umd.edu/people/dmanocha/">Prof.&nbsp;Dinesh&nbsp;Manocha</a>. I am broadly interested in building multi-modal machine learning models to create high-quality sound experiences in interactive applications. My current line of research is learning-based  <a href="https://gamma.umd.edu/researchdirections/sound/main">sound synthesis and propogation</a> for AR and VR applications and  <a href="https://gamma.umd.edu/researchdirections/speech/main">audio/speech processing applications</a>.
             
             <br><br>
 
