--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a target="_blank" href="./CV.pdf"> CV </a></h7>
             </div>
             <br>
-            I am a 5th year PhD student in Electrical and Computer Engineering at <a href="https://ece.umd.edu/"> University of Maryland-College Park</a> advised by <a href="https://www.cs.umd.edu/people/dmanocha/">Prof.&nbsp;Dinesh&nbsp;Manocha</a>. I am broadly interested in building multi-modal machine learning models to create high-quality sound experiences in interactive applications. My current line of research is learning-based  <a href="https://gamma.umd.edu/researchdirections/sound/main">sound synthesis and propogation</a> for AR and VR applications and  <a href="https://gamma.umd.edu/researchdirections/speech/main">audio/speech processing applications</a>.
+            I am an Applied Scientist at Amazon.
             
             <br><br>
 
@@ -134,11 +134,12 @@
                         <td><img src="./m3.png" width="220px"></td>
                         <td>
                             <p>
-                                <b>M3-AUDIODEC: MULTI-CHANNEL MULTI-SPEAKER MULTI-SPATIAL AUDIO CODEC</b><br>
+                                <b>BANC: Towards Efficient Binaural Audio Neural Codec for Overlapping Speech</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, <a href="https://scholar.google.com/citations?user=4nGncN4AAAAJ">Shi-Xiong Zhang</a>, <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ">Dong Yu</a> <br>
                                 <b>Arxiv</b><br>
                                 <a href="https://github.com/anton-jeran/MULTI-AUDIODEC">Code</a>&nbsp;|&nbsp;
                                 <a href="https://arxiv.org/pdf/2309.07416.pdf">Paper</a>&nbsp;|&nbsp;
+                                <a href="https://www.youtube.com/watch?v=kf4A1ljuOuk">Presentation</a>&nbsp;|&nbsp;
                                 <a href="https://anton-jeran.github.io/MAD/">Webpage</a>
                             </p>
                         </td>
