--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <p>
                                 <b>BANC: Towards Efficient Binaural Audio Neural Codec for Overlapping Speech</b><br>
                                 <b>Anton Jeran Ratnarajah</b>, <a href="https://scholar.google.com/citations?user=4nGncN4AAAAJ">Shi-Xiong Zhang</a>, <a href="https://scholar.google.com/citations?user=tMY31_gAAAAJ">Dong Yu</a> <br>
-                                <b>Arxiv</b><br>
+                                <b>ICASSP 2025</b><br>
                                 <a href="https://github.com/anton-jeran/MULTI-AUDIODEC">Code</a>&nbsp;|&nbsp;
                                 <a href="https://arxiv.org/pdf/2309.07416.pdf">Paper</a>&nbsp;|&nbsp;
                                 <a href="https://www.youtube.com/watch?v=kf4A1ljuOuk">Presentation</a>&nbsp;|&nbsp;
