--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <a target="_blank" href="./CV.pdf"> CV </a></h7>
             </div>
             <br>
-            I am an Applied Scientist at Amazon.
+            I am currently an Applied Scientist on Amazon's Audio Technology team, where I work on building on-device machine learning and audio foundation models to improve user experience. I received my PhD in Electrical and Computer Engineering from the University of Maryland-College Park in 2024. My PhD research focused broadly on developing multi-modal machine learning models to create high-quality sound experiences in interactive applications.
             
             <br><br>
 
